--- a/styles.css
+++ b/styles.css
@@ -15,4 +15,14 @@
 
 body{
     font-family: 'Kumbh Sans', sans-serif;
+    background-color: var(--Soft-violet);
+}
+
+.container{
+   border-radius: 20px;
+   background-color: var(--Light-grayish-blue);
+   margin:50px 20px 20px 20px;
+   padding-left: 25px;
+   padding-right: 25px;
+   text-align: center;
 }
