--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,14 @@ body{
     position: relative;
     top: -125px;
 }
+.bg-pattern{
+    background-image: url("images/bg-pattern-mobile.svg");
+    height: 246px;
+    background-size: 280px;
+    background-repeat: no-repeat;
+    position: relative;
+    top: -245px;
+}
 
 /*
 .bg-img img{
