--- a/styles.css
+++ b/styles.css
@@ -35,12 +35,12 @@ body{
     top: -125px;
 }
 .bg-pattern{
-    background-image: url("images/bg-pattern-mobile.svg");
-    height: 246px;
+    background-image: url(images/bg-pattern-mobile.svg);
+    height: 129px;
     background-size: 280px;
     background-repeat: no-repeat;
     position: relative;
-    top: -245px;
+    top: -216px;
 }
 
 /*
