--- a/styles.css
+++ b/styles.css
@@ -19,22 +19,13 @@ body{
 }
 
 .container{
-   border-radius: 20px;
-   background-color: var(--Light-grayish-blue);
-   margin:139px 20px 20px 20px;
-   padding-left: 25px;
-   padding-right: 25px;
-   text-align: center;
+    border-radius: 20px;
+    background-color: var(--Light-grayish-blue);
+    margin: 139px 20px 20px 20px;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 .bg-img{
-    background-image: url(images/illustration-woman-online-mobile.svg);
-    height: 214px;
-    background-size: 280px;
-    background-repeat: no-repeat;
-    position: relative;
-    top: -125px;
-}
-.bg-pattern{
     background-image: url(images/bg-pattern-mobile.svg);
     height: 129px;
     background-size: 280px;
@@ -42,15 +33,24 @@ body{
     position: relative;
     top: -216px;
 }
+.bg-pattern{
+    background-image: url(images/bg-pattern-mobile.svg);
+    height: 129px;
+    background-size: 255px;
+    background-repeat: no-repeat;
+    position: relative;
+    top: -216px;
+}
 
 /*
-.bg-img img{
-    margin-top: -120px;
-    position: relative;
-}
-position: absolute;
-    top: 150px;
-    left: 48px;
-    width: 288px;
+
+
+
+
+
+    margin-top: -190px;
+    color: var(--Very-dark-desaturated-blue);
+    margin-bottom: 40px;
+
     */
 
