--- a/styles.css
+++ b/styles.css
@@ -41,4 +41,10 @@ body{
     position: relative;
     top: -187px;
 }
+h1{
+    margin-left: 95px;
+    margin-top: -163px;
+    margin-bottom: 30px;
+    color: var(--Very-dark-desaturated-blue);
+}
 
