--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body{
     background-repeat: no-repeat;
     position: relative;
     top: -109px;
+    margin-left: 18px;
 }
 .bg-pattern{
     background-image: url(images/bg-pattern-mobile.svg);
@@ -41,6 +42,7 @@ body{
     background-repeat: no-repeat;
     position: relative;
     top: -187px;
+    margin-left: 10px;
 }
 h1{
     margin-left: 112px;
